--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
     "laravel": {
         "providers": [
             "hoalzein\\Prof4Net\\Html\\P4NHtmlServiceProvider"
-        ]
+        ],
+		"aliases": {
+            "P4NHTML": "hoalzein\\Prof4Net\\Html\\P4NHtmlFacade"
+        }
     }
 }
 }
